[Doc] : cocktailrank API swagger 작성
