# back/src/routers/CocktailRouter.js
@@ -35,6 +35,23 @@ CocktailRouter.get("/cocktails/:name", async (req, res, next) => {
   }
 });
 
+
+CocktailRouter.get("/cocktailrank", async (req, res, next) => {
+  try {
+    const cocktail = await CocktailService.rank10Cocktail();
+
+    if (cocktail == null) {
+      throw new Error("데이터를 불러오는 데 실패했습니다.");
+    }
+
+    res.status(200).json(cocktail);
+
+  } catch (error) {
+    next(error);
+  }
+});
+
+
 CocktailRouter.delete("/cocktail/:name", verifyToken, async(req, res, next) => {
   try {
     if (req.params.name == null ) {
@@ -120,21 +137,6 @@ CocktailRouter.post("/cocktail/:name", verifyToken, async (req, res, next) => {
     next(error);
   }
 
-});
-
-CocktailRouter.get("/cocktail/rank", async (req, res, next) => {
-  try {
-    const cocktail = await CocktailService.rank10Cocktail();
-
-    if (cocktail == null) {
-      throw new Error("업데이트 도중 에러가 발생했습니다.");
-    }
-
-    res.status(200).json(cocktail);
-
-  } catch (error) {
-    next(error);
-  }
 });
 
 
